--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -84,8 +84,12 @@ jobs:
           docker compose -f .devcontainer/docker-compose.yml exec -T docs /bin/sh -c "\
             git config user.name ci-bot && \
             git config user.email ci-bot@example.com && \
-            git fetch && \
-            mike delete --push pr-${{ github.event.number }}"
+            git switch gh-pages && \
+            git switch - --detach && \
+            mike delete pr-${{ github.event.number }} && \
+            git switch gh-pages && \
+            git pull && \
+            git push"
 
       - name: "Deploy pr-${{ github.event.number }} version of the Docs"
         if: github.event_name == 'pull_request' && github.event.action != 'closed'
@@ -94,8 +98,12 @@ jobs:
           docker compose -f .devcontainer/docker-compose.yml exec -T docs /bin/sh -c "\
             git config user.name ci-bot && \
             git config user.email ci-bot@example.com && \
-            git fetch && \
-            mike deploy --push pr-${{ github.event.number }}"
+            git switch gh-pages && \
+            git switch - --detach && \
+            mike deploy pr-${{ github.event.number }} && \
+            git switch gh-pages && \
+            git pull && \
+            git push"
 
       - name: Deploy main version of the Docs
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
@@ -104,5 +112,9 @@ jobs:
           docker compose -f .devcontainer/docker-compose.yml exec -T docs /bin/sh -c "\
             git config user.name ci-bot && \
             git config user.email ci-bot@example.com && \
-            git fetch && \
-            mike deploy --push --update-aliases main latest"
+            git switch gh-pages && \
+            git switch - --detach && \
+            mike deploy --update-aliases main latest && \
+            git switch gh-pages && \
+            git pull && \
+            git push"
