--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -88,7 +88,7 @@ jobs:
             git switch - --detach && \
             mike delete pr-${{ github.event.number }} && \
             git switch gh-pages && \
-            git pull && \
+            git pull --no-rebase && \
             git push"
 
       - name: "Deploy pr-${{ github.event.number }} version of the Docs"
@@ -102,7 +102,7 @@ jobs:
             git switch - --detach && \
             mike deploy pr-${{ github.event.number }} && \
             git switch gh-pages && \
-            git pull && \
+            git pull --no-rebase && \
             git push"
 
       - name: Deploy main version of the Docs
@@ -116,5 +116,5 @@ jobs:
             git switch - && \
             mike deploy --update-aliases main latest && \
             git switch gh-pages && \
-            git pull && \
+            git pull --no-rebase && \
             git push"
