--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -88,7 +88,7 @@ jobs:
             git switch - --detach && \
             mike delete pr-${{ github.event.number }} && \
             git switch gh-pages && \
-            git pull && \
+            git pull --no-rebase && \
             git push"
 
       - name: "Deploy pr-${{ github.event.number }} version of the Docs"
@@ -102,7 +102,7 @@ jobs:
             git switch - --detach && \
             mike deploy pr-${{ github.event.number }} && \
             git switch gh-pages && \
-            git pull && \
+            git pull --no-rebase && \
             git push"
 
       - name: Deploy main version of the Docs
@@ -113,8 +113,8 @@ jobs:
             git config user.name ci-bot && \
             git config user.email ci-bot@example.com && \
             git switch gh-pages && \
-            git switch - --detach && \
+            git switch - && \
             mike deploy --update-aliases main latest && \
             git switch gh-pages && \
-            git pull && \
+            git pull --no-rebase && \
             git push"
