--- a/src/website/tsconfig.json
+++ b/src/website/tsconfig.json
@@ -29,6 +29,6 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "hooks/useSessionState.js"
-  ],
+, "lib/dotenv.js", "models/helper/parser.js", "utils/DownloadData.js"  ],
   "exclude": ["node_modules"]
 }
