Wait for docs to deploy before deleting

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -61,6 +61,12 @@ jobs:
     permissions:
       contents: write
     steps:
+      # very hacky I know but I can't think of a better way right now
+      - name: Wait for docs to deploy
+        if: github.event_name == 'pull_request' && github.event.action == 'closed'
+        shell: bash
+        run: sleep 120
+
       - name: Check out code
         uses: actions/checkout@v4
         with:
