--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -90,13 +90,7 @@ jobs:
           docker compose -f .devcontainer/docker-compose.yml exec -T docs /bin/sh -c "\
             git config user.name ci-bot && \
             git config user.email ci-bot@example.com && \
-            git switch gh-pages && \
-            git switch - --detach && \
-            mike delete pr-${{ github.event.number }} && \
-            git switch gh-pages && \
-            git pull --no-rebase && \
-            git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/UBCSailbot/sailbot_workspace.git && \
-            git push"
+            mike delete --push pr-${{ github.event.number }}"
 
       - name: "Deploy pr-${{ github.event.number }} version of the Docs"
         if: github.event_name == 'pull_request' && github.event.action != 'closed'
