--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,14 +1,15 @@
 # adapted from https://github.com/microsoft/vscode-dev-containers/blob/main/containers/javascript-node-mongo/.devcontainer/docker-compose.yml
 # Note: the "ports" property in this file will not forward from a codespace; add to "forwardPorts" in devcontainer.json instead
-version: '3.8'
-
 services:
   sailbot-workspace:
     build:
       context: .
       dockerfile: Dockerfile
     ports:
+      # website
       - "3005:3005"
+      # docs
+      # - "8000:8000"
     volumes:
       - ..:/workspaces/sailbot_workspace:cached
       - sailbot-new-project-bashhistory:/home/ros/commandhistory:delegated
