--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,5 +23,6 @@ jobs:
         username: root
         key: ${{ secrets.SSH_KEY }}
         script: |
+          [ ! -d "sailbot_workspace" ] && git clone https://github.com/UBCSailbot/sailbot_workspace.git
           cd sailbot_workspace
           docker compose -f .devcontainer/docker-compose.yml -f .devcontainer/docker-compose.website.yml up --force-recreate -d
