Final changes to deployment

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -2,10 +2,9 @@ name: Deployment
 
 on:
   # Uncomment once we are ready to deploy 
-  push:
-    branches:
-      - main
-      - deployment 
+  #push:
+  #  branches:
+  #    - main
   workflow_dispatch:
 
 jobs:
@@ -23,7 +22,6 @@ jobs:
         script: |
           [ ! -d "sailbot_workspace" ] && git clone https://github.com/UBCSailbot/sailbot_workspace.git
           cd sailbot_workspace
-          git switch deployment
           git pull
           touch src/website/.env.local # Adds a local environment file to VM to override env vars in .env.production  
           echo NEXT_PUBLIC_SERVER_HOST=http://${{ secrets.SSH_HOST }} >> src/website/.env.local
