Write about us page

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -179,3 +179,4 @@ nav:
       - Points of Sail: reference/sailing/points_of_sail.md
       - AIS Terms: reference/sailing/ais_terms.md
       - Miscellaneous: reference/sailing/miscellaneous.md
+  - About Us: about_us.md
