--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -69,6 +69,11 @@ jobs:
 
       - name: Check out code
         uses: actions/checkout@v4
+        with:
+          # checkout all commits to get accurate page revision times
+          # for the git-revision-date-localized plugin
+          # and to fetch the gh-pages branch
+          fetch-depth: '0'
 
       - name: Start containers
         shell: bash
