--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -56,6 +56,8 @@ extra:
       link: https://www.ubcsailbot.org/
     - icon: material/instagram
       link: https://www.instagram.com/ubcsailbot/
+    - icon: material/facebook
+      link: https://www.facebook.com/ubcsailbot
     - icon: material/linkedin
       link: https://www.linkedin.com/company/ubc-sailbot/
     - icon: material/github
