Update more script paths

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,7 +14,7 @@
 	"containerEnv": {
 		"LIBGL_ALWAYS_SOFTWARE": "1" // Needed for software rendering of opengl
 	},
-	"postCreateCommand": "./setup.sh",
+	"postCreateCommand": "./scripts/setup.sh",
 	// Set *default* container specific settings.json values on container create.
 	"customizations": {
 		"vscode": {
