--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,9 +17,9 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Test
-      uses: ./.github/actions/run-in-container/
+      uses: ./.github/actions/scripts/
       with:
-        script: 'test'
+        script: 'run-tests'
         run-website: 'true'
 
   ament-lint:
@@ -36,7 +36,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Run linter
-      uses: ./.github/actions/run-in-container/
+      uses: ./.github/actions/scripts/
       with:
         script: 'ament-lint'
         linter: ${{ matrix.linter }}
@@ -49,6 +49,6 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Run linter
-      uses: ./.github/actions/run-in-container/
+      uses: ./.github/actions/scripts/
       with:
         script: 'clang-tidy'
