--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Test
-      uses: ./.github/actions/scripts/
+      uses: ./scripts/
       with:
         script: 'run-tests'
         run-website: 'true'
@@ -36,7 +36,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Run linter
-      uses: ./.github/actions/scripts/
+      uses: ./scripts/
       with:
         script: 'ament-lint'
         linter: ${{ matrix.linter }}
@@ -49,6 +49,6 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Run linter
-      uses: ./.github/actions/scripts/
+      uses: ./scripts/
       with:
         script: 'clang-tidy'
