--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -72,6 +72,7 @@ jobs:
         with:
           # checkout all commits to get accurate page revision times
           # for the git-revision-date-localized plugin
+          # and to fetch the gh-pages branch
           fetch-depth: '0'
 
       - name: Start containers
