added node_modules and settings.json to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 
 # microsoft c/c++ intellisense (disabled in favor of clangd)
 /.vscode/c_cpp_properties.json
+/.vscode/settings.json
 
 # python
 __pycache__/
@@ -32,3 +33,6 @@ venv/
 .cache/
 # Build
 site/
+
+# web
+/src/website/tests/node_modules/*
