Build images workflows pushes to latest tag as well

--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -40,7 +40,9 @@ jobs:
           context: "{{defaultContext}}:.devcontainer/base-dev"
           file: base-dev.Dockerfile
           push: true
-          tags: ghcr.io/ubcsailbot/sailbot_workspace/base:${{ inputs.tag }}
+          tags: |
+            ghcr.io/ubcsailbot/sailbot_workspace/base:${{ inputs.tag }}
+            ghcr.io/ubcsailbot/sailbot_workspace/base:latest
           platforms: linux/arm64,linux/amd64
           cache-from: type=gha
           cache-to: type=gha,mode=max
@@ -52,7 +54,9 @@ jobs:
           context: "{{defaultContext}}:.devcontainer/base-dev"
           file: base-dev.Dockerfile
           push: true
-          tags: ghcr.io/ubcsailbot/sailbot_workspace/local-base:${{ inputs.tag }}
+          tags: |
+            ghcr.io/ubcsailbot/sailbot_workspace/local-base:${{ inputs.tag }}
+            ghcr.io/ubcsailbot/sailbot_workspace/local-base:latest
           platforms: linux/arm64,linux/amd64
           cache-from: type=gha
           cache-to: type=gha,mode=max
@@ -64,7 +68,9 @@ jobs:
           context: "{{defaultContext}}:.devcontainer/base-dev"
           file: base-dev.Dockerfile
           push: true
-          tags: ghcr.io/ubcsailbot/sailbot_workspace/dev:${{ inputs.tag }}
+          tags: |
+            ghcr.io/ubcsailbot/sailbot_workspace/dev:${{ inputs.tag }}
+            ghcr.io/ubcsailbot/sailbot_workspace/dev:latest
           platforms: linux/arm64,linux/amd64
           cache-from: type=gha
           cache-to: type=gha,mode=max
