Switch user and workdir

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -16,3 +16,7 @@ COPY --chown=${USERNAME}:${USERNAME} config ${HOME}
 #     && apt-get autoremove -y \
 #     && apt-get clean -y \
 #     && rm -rf /var/lib/apt/lists/{apt,dpkg,cache,log} /tmp/* /var/tmp/*
+
+# set user and working directory
+USER ${USERNAME}
+WORKDIR ${ROS_WORKSPACE}
