--- a/.devcontainer/website/docker-compose.website.prod.yml
+++ b/.devcontainer/website/docker-compose.website.prod.yml
@@ -8,9 +8,11 @@ services:
     volumes:
       - ../src/website:/website:cached
       - website-node-modules:/website/node_modules:delegated
+      - website-tests-node-modules:/website/tests/node_modules:delegated
 
     # Runs on the same network as the workspace container, allows "forwardPorts" in devcontainer.json function.
     network_mode: service:sailbot-workspace
 
 volumes:
   website-node-modules:
+  website-tests-node-modules:
