Give user ownership of ros workspace

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -18,5 +18,7 @@ COPY --chown=${USERNAME}:${USERNAME} config ${HOME}
 #     && rm -rf /var/lib/apt/lists/{apt,dpkg,cache,log} /tmp/* /var/tmp/*
 
 # set user and working directory
+RUN mkdir -p "${ROS_WORKSPACE}" \
+    && chown "${USERNAME}" "${ROS_WORKSPACE}"
 USER ${USERNAME}
 WORKDIR ${ROS_WORKSPACE}
