--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
       - name: Checkout workspace
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GH_TOKEN }}
       - name: Install dependencies and run lint checks
         run: |
           cd sailbot_workspace/src/website
@@ -38,4 +40,3 @@ jobs:
             touch src/website/.env.local # Adds a local environment file to VM to override env vars in .env.production  
             echo NEXT_PUBLIC_SERVER_HOST=http://${{ secrets.SSH_HOST }} >> src/website/.env.local
             docker compose -f .devcontainer/docker-compose.yml -f .devcontainer/website/docker-compose.website.prod.yml up --force-recreate -d --build --remove-orphans
-            
