--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Checkout workspace
         uses: actions/checkout@v4
         with:
-          token: ${{ secrets.GH_TOKEN }}
+          token: ${{ secrets.PATRICK_PAT }}
       - name: Install dependencies and run lint checks
         run: |
           cd sailbot_workspace/src/website
