--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -14,4 +14,4 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Get branch name
-      run: echo $GITHUB_REF
+      run: echo ${{ secrets.TEST_SECRET }}
