--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -14,4 +14,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Get branch name
-      run: echo ${{ secrets.TEST_SECRET }}
+      run: export SECRET=${{ secrets.TEST_SECRET }}
+
+    - name: Get ..
+      run: echo $SECRET
