--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,11 +9,17 @@ updates:
     directory: "/" # Location of package manifests
     schedule:
       interval: "weekly"
+  # Disable dependabot for website dependencies
   - package-ecosystem: "npm"
-    directory: "/"
+    directory: "/src/website"
     schedule:
       interval: "weekly"
-    # Disable all pull requests for npm dependencies
+    open-pull-requests-limit: 0
+  # Disable dependabot for website test dependencies
+  - package-ecosystem: "npm"
+    directory: "/src/website/tests"
+    schedule:
+      interval: "weekly"
     open-pull-requests-limit: 0
     # # Create a group of dependencies to be updated together in one pull request
     # groups:
