--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -2,10 +2,9 @@ name: Deployment
 
 on:
   workflow_dispatch:
-    # Uncomment once we are ready to deploy 
-    #push:
-    #  branches:
-    #    - main
+  push:
+    branches:
+      - main
   pull_request:
     branches:
       - main
@@ -22,10 +21,6 @@ jobs:
         with:
           token: ${{ secrets.GH_TOKEN }}
           
-      - name: Debug - List directory structure
-        run: |
-          ls -R
-
       - name: Install dependencies and run lint checks
         run: |
           cd src/website
@@ -37,16 +32,46 @@ jobs:
           cd src/website
           npm run build
           
-      - name: Update docker image
+      - name: Debug SSH Key for Pre-production
+        if: github.event_name == 'pull_request'
+        run: |
+          echo "${{ secrets.SSH_KEY_PREPROD }}" | tr -d '\r' > key_preprod
+          chmod 600 key_preprod
+          ssh-keygen -y -f key_preprod
+          
+      - name: Debug SSH Key for Production
+        if: github.event_name == 'push'
+        run: |
+          echo "${{ secrets.SSH_KEY_PROD }}" | tr -d '\r' > key_prod
+          chmod 600 key_prod
+          ssh-keygen -y -f key_prod
+          
+      - name: Update docker image for pre-production
+        if: github.event_name == 'pull_request'
         uses: appleboy/ssh-action@v1.0.3
         with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USERNAME }}
-          key: ${{ secrets.SSH_KEY }}
+          host: ${{ secrets.SSH_HOST_PREPROD }}
+          username: ${{ secrets.SSH_USERNAME_PREPROD }}
+          key: ${{ secrets.SSH_KEY_PREPROD }}
           script: |
             [ ! -d "sailbot_workspace" ] && git clone https://github.com/UBCSailbot/sailbot_workspace.git
             cd sailbot_workspace
             git pull
             touch src/website/.env.local # Adds a local environment file to VM to override env vars in .env.production  
-            echo NEXT_PUBLIC_SERVER_HOST=http://${{ secrets.SSH_HOST }} >> src/website/.env.local
+            echo NEXT_PUBLIC_SERVER_HOST=http://${{ secrets.SSH_HOST_PREPROD }} >> src/website/.env.local
+            docker compose -f .devcontainer/docker-compose.yml -f .devcontainer/website/docker-compose.website.prod.yml up --force-recreate -d --build --remove-orphans
+
+      - name: Update docker image for production
+        if: github.event_name == 'push'
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.SSH_HOST_PROD }}
+          username: ${{ secrets.SSH_USERNAME_PROD }}
+          key: ${{ secrets.SSH_KEY_PROD }}
+          script: |
+            [ ! -d "sailbot_workspace" ] && git clone https://github.com/UBCSailbot/sailbot_workspace.git
+            cd sailbot_workspace
+            git pull
+            touch src/website/.env.local # Adds a local environment file to VM to override env vars in .env.production  
+            echo NEXT_PUBLIC_SERVER_HOST=http://${{ secrets.SSH_HOST_PROD }} >> src/website/.env.local
             docker compose -f .devcontainer/docker-compose.yml -f .devcontainer/website/docker-compose.website.prod.yml up --force-recreate -d --build --remove-orphans
