--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -41,28 +41,28 @@ jobs:
         if: github.event_name == 'pull_request'
         uses: appleboy/ssh-action@v1.0.3
         with:
-          host: ${{ secrets.SSH_PREPROD_HOST }}
-          username: ${{ secrets.SSH_PREPROD_USERNAME }}
-          key: ${{ secrets.SSH_PREPROD_KEY }}
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USERNAME }}
+          key: ${{ secrets.SSH_KEY }}
           script: |
             [ ! -d "sailbot_workspace" ] && git clone https://github.com/UBCSailbot/sailbot_workspace.git
             cd sailbot_workspace
             git pull
             touch src/website/.env.local # Adds a local environment file to VM to override env vars in .env.production
-            echo NEXT_PUBLIC_SERVER_HOST=http://${{ secrets.SSH_PREPROD_HOST }} >> src/website/.env.local
+            echo NEXT_PUBLIC_SERVER_HOST=http://${{ secrets.SSH_HOST }} >> src/website/.env.local
             docker compose -f .devcontainer/docker-compose.yml -f .devcontainer/website/docker-compose.website.prod.yml up --force-recreate -d --build --remove-orphans
 
       - name: Update docker image for production
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         uses: appleboy/ssh-action@v1.0.3
         with:
-          host: ${{ secrets.SSH_PROD_HOST }}
-          username: ${{ secrets.SSH_PROD_USERNAME }}
-          key: ${{ secrets.SSH_PROD_KEY }}
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USERNAME }}
+          key: ${{ secrets.SSH_KEY }}
           script: |
             [ ! -d "sailbot_workspace" ] && git clone https://github.com/UBCSailbot/sailbot_workspace.git
             cd sailbot_workspace
             git pull
             touch src/website/.env.local # Adds a local environment file to VM to override env vars in .env.production
-            echo NEXT_PUBLIC_SERVER_HOST=http://${{ secrets.SSH_PROD_HOST }} >> src/website/.env.local
+            echo NEXT_PUBLIC_SERVER_HOST=http://${{ secrets.SSH_HOST }} >> src/website/.env.local
             docker compose -f .devcontainer/docker-compose.yml -f .devcontainer/website/docker-compose.website.prod.yml up --force-recreate -d --build --remove-orphans
