--- a/src/website/package.json
+++ b/src/website/package.json
@@ -14,9 +14,9 @@
     "@dnd-kit/sortable": "^8.0.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/x-date-pickers": "^6.19.6",
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.12",
+    "@mui/x-date-pickers": "^6.19.6",
     "@react-google-maps/api": "^2.19.2",
     "@reduxjs/toolkit": "^1.9.5",
     "dayjs": "^1.11.10",
@@ -37,6 +37,7 @@
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.2.3",
     "redux-thunk": "^2.4.2",
+    "split-pane-react": "^0.1.3",
     "uplot": "^1.6.30",
     "uplot-react": "^1.1.5"
   },
