Update deployment container script (#396)
* Build images workflows pushes to latest tag as well

* Make specifying tag required

* Remove unneeded parts of run-tests script

* Start revamping start container script to use docker compose

* Switch user and workdir

* Use long argument names

* Use dev version of website

* Rebuild on changes to dockerfiles

* Run software

* Update argument usage

* Do not publish base and local-base images

* Improve argument parsing

* Add clean and reset arguments

* Update the deployment readme

* Can run without internet

* Ignore all node modules in web gitignore

* Add volume for web tests node modules

* clean and reset before running commands not after

* Downgrade mongodb to be compatible with rpi

* Remove deprecated build option

* Debugging failing CI

* Give user ownership of ros workspace

* Add sudo to purge command

* Fiddle around with user permissions

* Source in run-tests

* Cleanup

* Switch to prod version of website

* Create run_software.sh and cleanup start_containers.sh

* Make start_containers.sh compatible with mac

* Try specifying user in docker compose file

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    user: ros
     ports:
       # website
       - "3005:3005"
@@ -27,7 +28,7 @@ services:
 
   # URL: mongodb://localhost:27017
   mongodb:
-    image: mongo:7
+    image: mongo:${MONGO_TAG:-4.4.18}
     restart: unless-stopped
     volumes:
       - mongodb-data:/data/db:delegated
