--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -4,10 +4,9 @@ on:
   workflow_dispatch:
     inputs:
       tag:
-        description: 'Tag of the base, local-base, and dev images'
-        required: false
+        description: 'Tag of the Docker image'
+        required: true
         type: string
-        default: 'main'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -34,37 +33,15 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.PAT_TOKEN }}
 
-      - name: Build and push base
-        uses: docker/build-push-action@v6
-        with:
-          context: "{{defaultContext}}:.devcontainer/base-dev"
-          file: base-dev.Dockerfile
-          push: true
-          tags: ghcr.io/ubcsailbot/sailbot_workspace/base:${{ inputs.tag }}
-          platforms: linux/arm64,linux/amd64
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-          target: base
-
-      - name: Build and push local-base
-        uses: docker/build-push-action@v6
-        with:
-          context: "{{defaultContext}}:.devcontainer/base-dev"
-          file: base-dev.Dockerfile
-          push: true
-          tags: ghcr.io/ubcsailbot/sailbot_workspace/local-base:${{ inputs.tag }}
-          platforms: linux/arm64,linux/amd64
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-          target: local-base
-
       - name: Build and push dev
         uses: docker/build-push-action@v6
         with:
           context: "{{defaultContext}}:.devcontainer/base-dev"
           file: base-dev.Dockerfile
           push: true
-          tags: ghcr.io/ubcsailbot/sailbot_workspace/dev:${{ inputs.tag }}
+          tags: |
+            ghcr.io/ubcsailbot/sailbot_workspace/dev:${{ inputs.tag }}
+            ghcr.io/ubcsailbot/sailbot_workspace/dev:latest
           platforms: linux/arm64,linux/amd64
           cache-from: type=gha
           cache-to: type=gha,mode=max
